# csvise-cli-tool

./: .gitignore  LICENSE  MANIFEST.in  README.md  csvdisplay.py  csvtools.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
csvise.egg-info/: PKG-INFO
csvtools/: __init__.py  __main__.py  cleaning.py  cleaning_ops.py  cli.py  config.py  csvtools.py  delimiter.py  formatter.py  rich_analysis.py  rich_formatter.py  statistics.py  types.py  utils.py
csvtools.egg-info/: PKG-INFO
scripts/: release.py
tests/: __init__.py  test_basic.py
