[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvise"
version = "1.2.0"
description = "CLI Tools for Tabular Data - CSV analysis, validation, and beautiful display"
readme = "README.md"
    license = "MIT"
authors = [
    {name = "Rawsab Said", email = "rawsab04@gmail.com"}
]
maintainers = [
    {name = "Rawsab Said", email = "rawsab04@gmail.com"}
]
keywords = ["csv", "cli", "data-analysis", "validation", "table", "rich", "formatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/rawsabsaid/csvise-cli-tool"
Documentation = "https://github.com/rawsabsaid/csvise-cli-tool#readme"
Repository = "https://github.com/rawsabsaid/csvise-cli-tool"
"Bug Tracker" = "https://github.com/rawsabsaid/csvise-cli-tool/issues"
"Source Code" = "https://github.com/rawsabsaid/csvise-cli-tool"

[project.scripts]
csvise = "csvtools:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csvtools*"]

[tool.setuptools.package-data]
csvtools = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=csvtools",
    "--cov-report=term-missing",
    "--cov-report=html",
]
